# Gateway-HomeAutomation

./: CMakeLists.txt  Makefile  partitions_example.csv  sdkconfig  sdkconfig.old
components/: Oled.rar
components/ConfigType/: CMakeLists.txt  ConfigType.h
components/DS1307/: DS1307.c  DS1307.h
components/IrHandle/: CMakeLists.txt  IrHandle.c  IrHandle.h
components/Oled/: OLEDDisplay.c
components/Oled/include/: OLEDDisplay.h
components/app/: CMakeLists.txt  app.c  app.h
components/app_http_server/: app_http_server.c  app_http_server.h
components/ble_mesh_handle/: CMakeLists.txt  ble_mesh_handle.c  ble_mesh_handle.h
components/clock_rtc/: CMakeLists.txt  clock_rtc.c  clock_rtc.h
components/mqtt_handle/: CMakeLists.txt  mqtt_handle.c  mqtt_handle.h
components/peripherals/: peripherals.c  peripherals.h
components/thingsboard_handle/: CMakeLists.txt  thingsboard_handle.c  thingsboard_handle.h
components/utilities/: utilities.c  utilities.h
components/wifi_connecting/: CMakeLists.txt  component.mk  wifi_connecting.c  wifi_connecting.h
html/: web.html
main/: CMakeLists.txt  common.h  component.mk  main.c
